[tool.poetry]
name = "atcoderpython3"
version = "0.1.0"
description = ""
authors = ["atti"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.18.2"
numba = "0.48.0"
scipy = "1.4.1"
scikit-learn = "0.22.2"
networkx = "2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
mypy = "^0.800"
jupyter = "^1.0.0"
pytest-timeout = "^1.4.2"
rope = "^0.18.0"
pytest = "^6.2.2"
pytest-xdist = "^2.2.0"
requests = "^2.25.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
